@@ -1,4 +1,9 @@
-TODO 7.0
+TODO 7.2
+========
+
+ - Login menu er kvadret
+
+TODO x.z
 ========
 
  - Gennemgå sider for at sikre "todelt menu" og "oversættelser"
