@@ -6,6 +6,7 @@ sorl-thumbnail==3.2.5
 django-tinymce==1.5.1a2
 django-extensions==0.6
 phpserialize==1.2
+django-piston==0.2.3
 
 -e git://github.com/sema/django-uni-form.git#egg=django-uni-form
 -e git://github.com/jtauber/django-mailer.git@cea79940d477246ebace#egg=django-mailer
