@@ -2,6 +2,8 @@
 
  * Added new APIs and High-Availability APIs
  * Added a resend-emails function in sadmin for all attendees
+ * Added package concept to option groups
+     An option group declared as a package gives a discount if all options are selected
 
 Dependencies
 
